--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
     <script src="https://kit.fontawesome.com/4c7f2cf79a.js" crossorigin="anonymous"></script>
 
-    <link rel="icon" href="img/favicon-32x32.png" sizes="32x32" alt="Apple"/>
+    <link rel="icon" href="img/favicon.ico" sizes="32x32" alt="Apple"/>
     <link rel="icon" href="img/android-chrome-192x192.png" sizes="192x192" alt="Iphone"/>
     <link rel="icon" href="img/android-chrome-512x512.png" sizes="144x144" alt="Startup"/>
     <link rel="apple-touch-icon" href="img/apple-touch-icon.png" alt="Touch"/>
@@ -70,7 +70,7 @@
 
     <!-- Header Section Begin -->
     <div class="containers" style="width: 100%;">
-        <header class="header" style="    background-image: url(img/Woodwork\ \(15\).png); 
+        <header class="header" style="    background-image: url(img/logo.webp); 
         background-position: center;
         background-size: contain;
         background-repeat: no-repeat;
@@ -100,7 +100,7 @@
         <div class="page-content">
             <div>
               <div class="profile-page">
-                <div class="wrapper" style="background-image: url(img/Woodwork\ \(16\).png); background-position: center;
+                <div class="wrapper" style="background-image: url(img/landing.webp); background-position: center;
                 background-size: cover; background-repeat: no-repeat;  margin: -10px; border-color: #14559c; height: 90vh;">
                   <div class="page-header page-header-small" filter-color="green">
                     <div class="container">
@@ -218,7 +218,7 @@
                             <p class="card__description">Description</p>
                         </div>
                     </article>
-                    <article class="card" style="background: url(/img/Screenshot\ 2022-09-17\ at\ 11.38.37.png); background-size: contain;     background-position-y: center; background-repeat: no-repeat;">
+                    <article class="card" style="background: url(/img/logo.webp); background-size: contain;     background-position-y: center; background-repeat: no-repeat;">
                     </article>
                     <article class="card" style="background: url(/img/producttable6.png); background-size: contain; background-repeat: no-repeat;">
                         <div class="card__content">
@@ -280,14 +280,14 @@
                     <div class="row" style="justify-content: center;">
                         <div class="col-sm-4">
                             <div class="team-member">
-                                <img src="img/Tommo.png" class="img-responsive img-circle" alt="">
+                                <img src="img/tommo.webp" class="img-responsive img-circle" alt="">
                                 <h4>Tom Southern</h4>
                                 <p class="text-muted">Lead Designer</p>
                                 <p class="text-muted">Co-founder</p>
                                 <ul class="list-inline social-buttons" style="display: flex; flex-direction: row; flex-wrap: wrap;align-content: center;justify-content: center;align-items: center;">
                                     <li><a href="#"><i class="fa fa-facebook"></i></a>
                                     </li>
-                                    <li><div class="imageContainers" style="width: 45px; height:45px;"><img src="img/tommo.png" width="100%" height="100%" style="border-radius: 50px; border-color:black; border-width: thin; box-shadow: none;"></i></div>
+                                    <li><div class="imageContainers" style="width: 45px; height:45px;"><img src="img/tommo.webp" width="100%" height="100%" style="border-radius: 50px; border-color:black; border-width: thin; box-shadow: none;"></i></div>
                                     </li>
                                     <li><a href="#"><i class="fa fa-linkedin"></i></a>
                                     </li>
@@ -296,14 +296,14 @@
                         </div>
                         <div class="col-sm-4">
                             <div class="team-member" >
-                                <img src="img/Max.png" style="height: 350px;" class="img-responsive img-circle" alt="">
+                                <img src="img/max.webp" style="height: 350px;" class="img-responsive img-circle" alt="">
                                 <h4>Max Worsencroft</h4>
                                 <p class="text-muted">Lead Operations Control</p>
                                 <p class="text-muted">Co-founder</p>
                                 <ul class="list-inline social-buttons" style="display: flex; flex-direction: row; flex-wrap: wrap;align-content: center;justify-content: center;align-items: center;">
                                     <li><a href="#"><i class="fa fa-facebook"></i></a>
                                     </li>
-                                    <li><div class="imageContainers" style="width: 45px; height:45px;"><img src="img/Max.png" width="100%" height="100%" style="border-radius: 50px; border-color:black; border-width: thin; box-shadow: none;"></i></div>
+                                    <li><div class="imageContainers" style="width: 45px; height:45px;"><img src="img/max.webp" width="100%" height="100%" style="border-radius: 50px; border-color:black; border-width: thin; box-shadow: none;"></i></div>
                                     </li>
                                     <li><a href="#"><i class="fa fa-linkedin"></i></a>
                                     </li>
