--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
     <script src="https://kit.fontawesome.com/4c7f2cf79a.js" crossorigin="anonymous"></script>
 
-    <link rel="icon" href="img/favicon.ico" sizes="32x32" alt="Apple"/>
+    <link rel="icon" href="img/favicon-16x16.png" sizes="32x32" alt="Apple"/>
     <link rel="icon" href="img/android-chrome-192x192.png" sizes="192x192" alt="Iphone"/>
     <link rel="icon" href="img/android-chrome-512x512.png" sizes="144x144" alt="Startup"/>
     <link rel="apple-touch-icon" href="img/apple-touch-icon.png" alt="Touch"/>
@@ -261,7 +261,7 @@
                 </h1>
                 <div class="main-visual__background" style="background-size: contain;">
                         <video style="width:100%; border-radius: 10px; " controls>
-                            <source src="img/EpoxyWoods.mp4" type="video/mp4" allow="autoplay">
+                            <source src="img/PromoVid.mp4" type="video/mp4" allow="autoplay">
                         </video>
                     <div class="overlay"></div>
                 </div>
