--- a/shop-details.html
+++ b/shop-details.html
@@ -130,7 +130,7 @@
           </div>
           <div class="clearfix"></div>
             <input class="color-btn for-color-1" type="radio" style="visibility: hidden;" id="color-1" name="color-btn" checked />
-            <label class="first-color"  style="background-image: url('img/1.png')" for="color-1"></label>
+            <label class="first-color"  style="background-image: url('img/1.webp')" for="color-1"></label>
             <input class="color-btn for-color-2" type="radio" style="visibility: hidden;" id="color-2" name="color-btn" />
             <label class="color-2" style="background-image: url('img/2.png')" for="color-2"></label>
             <input class="color-btn for-color-3" type="radio" style="visibility: hidden;" id="color-3" name="color-btn" />
