--- a/shop-details.html
+++ b/shop-details.html
@@ -2,7 +2,7 @@
 <html lang="en" X-Frame-Options="SAMEORIGIN" X-Frame-Options: SAMEORIGIN X-Content-Type-Options="nosniff" X-Content-Type-Options: nosniff >
 
 <head>
-    <title>Tomax Bespoke | Bespoke Creative Woodwork</title>
+    <title>Epoxy Woods | Handcrafted Epoxy Tables and wood furniture</title>
     <meta name="title" content="Tomax Bespoke | Bespoke Creative Woodwork"/>
     <meta name="description" content="A bespoke handcrafted woodwork business, creating unique and creative crafts of high quality" />
     <meta name="keywords" content=""/>
@@ -31,16 +31,23 @@
 	<meta property="og:image:type" content="img/ion-icon name=logo-amazonion-icon (6).webp" alt="Ogtype"/>
 
     <!-- Google Tag Manager -->
+    <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+    new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+    j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+    'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+    })(window,document,'script','dataLayer','GTM-MW5JBGL');</script>
     <!-- End Google Tag Manager -->
 
     <meta http-equiv="Content-Security-Policy"/>  
     <script type="application/ld+json"></script>
 
-    <link rel="icon" href="img/favicon.png" sizes="32x32" alt="Apple"/>
-    <link rel="icon" href="img/ion-icon name=logo-amazonion-icon (7).webp" sizes="192x192" alt="Iphone"/>
-    <link rel="icon" href="img/ion-icon name=logo-amazonion-icon (7).webp" sizes="144x144" alt="Startup"/>
-    <link rel="apple-touch-icon" href="img/ion-icon name=logo-amazonion-icon (8).webp" alt="Touch"/>
-    <meta name="msapplication-TileImage" content="img/ion-icon name=logo-amazonion-icon (8).webp" sizes="270x270" height="270" width="270" alt="icon"/>
+    <script src="https://kit.fontawesome.com/4c7f2cf79a.js" crossorigin="anonymous"></script>
+
+    <link rel="icon" href="img/favicon-16x16.png" sizes="32x32" alt="Apple"/>
+    <link rel="icon" href="img/android-chrome-192x192.png" sizes="192x192" alt="Iphone"/>
+    <link rel="icon" href="img/android-chrome-512x512.png" sizes="144x144" alt="Startup"/>
+    <link rel="apple-touch-icon" href="img/apple-touch-icon.png" alt="Touch"/>
+    <meta name="msapplication-TileImage" content="img/android-chrome-512x512" sizes="270x270" height="270" width="270" alt="icon"/>
 
     <!-- Google Font -->
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;600;700;800;900&display=swap"
@@ -54,8 +61,6 @@
     <link rel="stylesheet" href="css/font-awesome.min.css" type="text/css">
     <link rel="stylesheet" href="css/style.css" type="text/css">
 
-    <script src="https://kit.fontawesome.com/4c7f2cf79a.js" crossorigin="anonymous"></script>
-
 </head>
 
 <body>
@@ -65,32 +70,32 @@
 
     <!-- Header Section Begin -->
     <div class="containers" style="width: 100%;">
-      <header class="header" style="    background-image: url(img/10.png); 
-      background-position: center;
-      background-size: contain;
-      background-repeat: no-repeat;
-      height: 10vh;
-      margin: 1vmax;">
-        <nav class="navbar"  style="justify-content: center;     background-color: #f1f5f800;">
-          <a style="color: #03327d; font-family: sans-serif;" class="brand" href="#"></a>
-          <input type="checkbox" id="nav" class="hidden">
-          <label for="nav" class="nav-toggle">
-              <span></span>
-              <span></span>
-              <span></span>
-          </label>
-          <div class="wrapper" style="    margin-top: 1.25vh;">
-              <ul class="menu" style="text-align-last: center;">
-              <li class="menu-item" style="border-width: thin; border-radius: 10px; padding: 10px; box-shadow: 5px 5px 10px #dbdbdb, -5px -5px 10px #ffffff;"><a href="index.html"><underline style="color: #03327d;">Home</underline></a></li>
-              <li class="menu-item"><a href="shop-details.html"><underline style="color: #03327d;">Shop </underline></a></li>
-
-              <li class="menu-item"><a href="shop.html" style="color: #00033c40;">Youtube</a></a></li>
-              <li class="menu-item"><a href="shop.html"><underline style="color: #03327d;"> Etsy</underline></a></li>
-              <li class="menu-item"><a href="faq.html"><underline style="color: #03327d;">About Us</underline></a></li>
-              </ul>
-          </div>
-          </nav>
-      </header>
+        <header class="header" style="    background-image: url(img/logo.webp); 
+        background-position: center;
+        background-size: contain;
+        background-repeat: no-repeat;
+        height: 15vh;
+        margin: 1vmax;">
+            <nav class="navbar"  style="justify-content: center;     background-color: #f1f5f800;">
+            <a style="color: #03327d; font-family: sans-serif;" class="brand" href="#"></a>
+            <input type="checkbox" id="nav" class="hidden">
+            <label for="nav" class="nav-toggle">
+                <span></span>
+                <span></span>
+                <span></span>
+            </label>
+            <div class="wrapper" style="    margin-top: 1.25vh;">
+                <ul class="menu" style="text-align-last: center;">
+                <li class="menu-item"><a href="index.html"><underline style="color: #03327d;">Home</underline></a></li>
+                <li class="menu-item" style="border-width: thin; border-radius: 10px; padding: 10px; box-shadow: 5px 5px 10px #dbdbdb, -5px -5px 10px #ffffff;"><a href="shop-details.html"><underline style="color: #03327d;">Shop </underline></a></li>
+  
+                <li class="menu-item"><a href="shop.html" style="color: #00033c40;">Youtube</a></a></li>
+                <li class="menu-item"><a href="shop.html"><underline style="color: #03327d;"> Etsy</underline></a></li>
+                <li class="menu-item"><a href="faq.html"><underline style="color: #03327d;">About Us</underline></a></li>
+                </ul>
+            </div>
+            </nav>
+        </header>
 <!-- Header Section Ends -->
 
 
