--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en" X-Frame-Options="SAMEORIGIN" X-Frame-Options: SAMEORIGIN X-Content-Type-Options="nosniff" X-Content-Type-Options: nosniff >
 
 <head>
-    <title>Epoxy Woods | Handcrafted Epoxy Tables and wood furniture</title>
-    <meta name="title" content="Tomax Bespoke | Bespoke Creative Woodwork"/>
-    <meta name="description" content="A bespoke handcrafted woodwork business, creating unique and creative crafts of high quality" />
+    <title>Epoxy Woods | Handcrafted Epoxy Tables and Bespoke Wood furniture</title>
+    <meta name="title" content="Epoxy Woods | Handcrafted Epoxy Tables and Bespoke Wood furniture"/>
+    <meta name="description" content="Crafting bespoke handmade wooden furniture, using the latest epoxy resin pours" />
     <meta name="keywords" content=""/>
     <meta name="robots" content="INDEX,FOLLOW"/>
     <meta charset="UTF-8" />
@@ -17,25 +17,20 @@
     <link rel="preload" as="style" href="https://fonts.googleapis.com/css?family=Lato%3A300%2C400%2C700%2C300%2C700%7CDomine%3A400&#038;display=swap" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato%3A300%2C400%2C700%2C300%2C700%7CDomine%3A400&#038;display=swap" media="print" onload="this.media='all'" /><noscript>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato%3A300%2C400%2C700%2C300%2C700%7CDomine%3A400&#038;display=swap" /></noscript>
-	<link rel="canonical" href="https://www.cravingcake.co.uk/"/>
+	<link rel="canonical" href="https://www.epoxywoods.co.uk/"/>
 	<meta property="og:locale" content="en" />
 	<meta property="og:type" content="website" />
     
-	<meta property="og:title" content="Tomax Bespoke | Bespoke Creative Woodwork" />
-	<meta property="og:description" content="A bespoke handcrafted woodwork business, creating unique and creative crafts of high quality" />
-	<meta property="og:url" content="https://www.mbdex.live/" />
-	<meta property="og:site_name" content="Tomax Bespoke" />
+	<meta property="og:title" content="Epoxy Woods | Handcrafted Epoxy Tables and Bespoke Wood furniture" />
+	<meta property="og:description" content="Crafting bespoke handmade wooden furniture, using the latest epoxy resin pours" />
+	<meta property="og:url" content="https://www.epoxywoods.co.uk/" />
+	<meta property="og:site_name" content="Epoxy Woods | Handcrafted Epoxy Tables and Bespoke Wood furniture" />
 	<meta property="og:image" content="img/ion-icon name=logo-amazonion-icon (6).webp" alt="Ogimage"/>
 	<meta property="og:image:width" content="2048" />
 	<meta property="og:image:height" content="2560" />
 	<meta property="og:image:type" content="img/ion-icon name=logo-amazonion-icon (6).webp" alt="Ogtype"/>
 
     <!-- Google Tag Manager -->
-    <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-    new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-    j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-    'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-    })(window,document,'script','dataLayer','GTM-MW5JBGL');</script>
     <!-- End Google Tag Manager -->
 
     <meta http-equiv="Content-Security-Policy"/>  
@@ -87,7 +82,7 @@
             <div class="wrapper" style="    margin-top: 1.25vh;">
                 <ul class="menu" style="text-align-last: center;">
                 <li class="menu-item" style="border-width: thin; border-radius: 10px; padding: 10px; box-shadow: 5px 5px 10px #dbdbdb, -5px -5px 10px #ffffff;"><a href="index.html"><underline style="color: #03327d;">Home</underline></a></li>
-                <li class="menu-item"><a href="shop-details.html"><underline style="color: #03327d;">Shop </underline></a></li>
+                <li class="menu-item"><a href="epoxy oak wood river table.html"><underline style="color: #03327d;">Shop </underline></a></li>
   
                 <li class="menu-item"><a href="shop.html" style="color: #00033c40;">Youtube</a></a></li>
                 <li class="menu-item"><a href="shop.html"><underline style="color: #03327d;"> Etsy</underline></a></li>
@@ -107,7 +102,7 @@
                       <div class="content-center" style="z-index: 2; top: 300px;"><BR><BR><BR><BR><BR><BR>
                         <div class="h2 title" style="color: #03327d; font-size: 5em; font-weight: bold; font-family:u;">Crafting Sustainable Perfection</div>
                         <p style="color: #03327d;"><img src=""></p>
-                        <a  class="btn btn-primary smooth-scroll mr-2 aos-init aos-animate" style="border: solid; background-image: url(img/Woodworkback.png);" href="shop-details.html" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Custom Design</a>
+                        <a  class="btn btn-primary smooth-scroll mr-2 aos-init aos-animate" style="border: solid; background-image: url(img/Woodworkback.png);" href="epoxy oak wood river table.html" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Custom Design</a>
                         <a  class="btn btn-primary aos-init aos-animate" style="border: solid; background-color: #03327d;" href="shop.html" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Shop all</a>
                         <a  class="btn btn-primary aos-init aos-animate" style="border: solid; background-color: #00183e;" href="shop.html" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Subscribe 10% Off!</a>
 
@@ -171,7 +166,7 @@
 
         <section id="Video" style="padding-top: 50px; padding-bottom: 0px;">
             <div class="row" style="justify-content: center;">
-                <a href="shop-details.html" class="btn" style="border-width: thin; border-radius: 10px; padding: 10px; box-shadow: 5px 5px 10px #dbdbdb, -5px -5px 10px #ffffff;">See all</a>
+                <a href="" class="btn" style="border-width: thin; border-radius: 10px; padding: 10px; box-shadow: 5px 5px 10px #dbdbdb, -5px -5px 10px #ffffff;">See all</a>
         
                 <div class="cards" style="    justify-content: center;">
                     <div class="cards__content" style="    top: -1vw; z-index:0 ;justify-self: center; padding: 2px;">
@@ -192,28 +187,28 @@
                 <div class="contain" style="padding-top: 25px; display: flex; flex-direction: row; flex-wrap: wrap; align-items: center; justify-content: center; gap: 20px;     text-align-last: center;">
                     <article class="card" style="background: url(/img/producttable1.png); background-size: contain; background-repeat: no-repeat;">
                         <div class="card__content">
-                            <h3 class="card__title"><a href="shop-details.html">"Product Name"</a></h3>
+                            <h3 class="card__title"><a href="epoxy oak wood river table.html">"Product Name"</a></h3>
                             <span class="card_subtitle">Price</span>
                             <p class="card__description">Description</p>
                         </div>
                     </article>
                     <article class="card" style="background: url(/img/producttable2.png); background-size: contain; background-repeat: no-repeat;">
                         <div class="card__content">
-                            <h3 class="card__title"><a href="shop-details.html">"Pro Name"</a></h3>
+                            <h3 class="card__title"><a href="epoxy oak wood river table.html">"Pro Name"</a></h3>
                             <span class="card_subtitle">Price</span>
                             <p class="card__description">Description</p>
                         </div>
                     </article>
                     <article class="card" style="background: url(/img/producttable3.png); background-size: contain; background-repeat: no-repeat;">
                         <div class="card__content">
-                            <h3 class="card__title"><a href="shop-details.html">"Pro Name"</a></h3>
+                            <h3 class="card__title"><a href="epoxy oak wood river table.html">"Pro Name"</a></h3>
                             <span class="card_subtitle">Price</span>
                             <p class="card__description">Description</p>
                         </div>
                     </article>
                     <article class="card" style="background: url(/img/producttable4.png); background-size: contain; background-repeat: no-repeat;">
                         <div class="card__content">
-                            <h3 class="card__title"><a href="shop-details.html">"Pro Name"</a></h3>
+                            <h3 class="card__title"><a href="epoxy oak wood river table.html">"Pro Name"</a></h3>
                             <span class="card_subtitle">Price</span>
                             <p class="card__description">Description</p>
                         </div>
@@ -222,28 +217,28 @@
                     </article>
                     <article class="card" style="background: url(/img/producttable6.png); background-size: contain; background-repeat: no-repeat;">
                         <div class="card__content">
-                            <h3 class="card__title"><a href="shop-details.html">"Pro Name"</a></h3>
+                            <h3 class="card__title"><a href="epoxy oak wood river table.html">"Pro Name"</a></h3>
                             <span class="card_subtitle">Price</span>
                             <p class="card__description">Description</p>
                         </div>
                     </article>
                     <article class="card" style="background: url(/img/producttable4.png); background-size: contain; background-repeat: no-repeat;">
                         <div class="card__content">
-                            <h3 class="card__title"><a href="shop-details.html">"Pro Name"</a></h3>
+                            <h3 class="card__title"><a href="epoxy oak wood river table.html">"Pro Name"</a></h3>
                             <span class="card_subtitle">Price</span>
                             <p class="card__description">Description</p>
                         </div>
                     </article>
                     <article class="card" style="background: url(/img/producttable5.png); background-size: contain; background-repeat: no-repeat;">
                         <div class="card__content">
-                            <h3 class="card__title"><a href="shop-details.html">"Pro Name"</a></h3>
+                            <h3 class="card__title"><a href="epoxy oak wood river table.html">"Pro Name"</a></h3>
                             <span class="card_subtitle">Price</span>
                             <p class="card__description">Description</p>
                         </div>
                     </article>
                     <article class="card" style="background: url(/img/producttable6.png); background-size: contain; background-repeat: no-repeat;">
                         <div class="card__content">
-                            <h3 class="card__title"><a href="shop-details.html">"Pro Name"</a></h3>
+                            <h3 class="card__title"><a href="epoxy oak wood river table.html">"Pro Name"</a></h3>
                             <span class="card_subtitle">Price</span>
                             <p class="card__description">Description</p>
                         </div>
@@ -376,7 +371,7 @@
                         <br><h5 class="widget-title">Contact</h5>
                         <div class="footer_menu">
                             <ul>
-                            <li><a href="cravingcake@gmail.com">Email Us</a></li>
+                            <li><a href="t.southern@hotmail.co.uk">Email Us</a></li>
                             <li><a href="faq.html">FAQ's</a></li>
                             </ul>
                         </div>
