--- a/faq.html
+++ b/faq.html
@@ -2,9 +2,9 @@
 <html lang="en" X-Frame-Options="SAMEORIGIN" X-Frame-Options: SAMEORIGIN X-Content-Type-Options="nosniff" X-Content-Type-Options: nosniff >
 
 <head>
-    <title>Tomax Bespoke | Bespoke Creative Woodwork</title>
-    <meta name="title" content="Tomax Bespoke | Bespoke Creative Woodwork"/>
-    <meta name="description" content="A bespoke handcrafted woodwork business, creating unique and creative crafts of high quality" />
+    <title>Epoxy Woods | Frequently Asked Questions</title>
+    <meta name="title" content="Epoxy Woods | Frequently Asked Questions"/>
+    <meta name="description" content="Crafting bespoke handmade wooden furniture, using the latest epoxy resin pours" />
     <meta name="keywords" content=""/>
     <meta name="robots" content="INDEX,FOLLOW"/>
     <meta charset="UTF-8" />
@@ -17,25 +17,20 @@
     <link rel="preload" as="style" href="https://fonts.googleapis.com/css?family=Lato%3A300%2C400%2C700%2C300%2C700%7CDomine%3A400&#038;display=swap" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato%3A300%2C400%2C700%2C300%2C700%7CDomine%3A400&#038;display=swap" media="print" onload="this.media='all'" /><noscript>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato%3A300%2C400%2C700%2C300%2C700%7CDomine%3A400&#038;display=swap" /></noscript>
-	<link rel="canonical" href="https://www.cravingcake.co.uk/"/>
+	<link rel="canonical" href="https://www.epoxywoods.co.uk/"/>
 	<meta property="og:locale" content="en" />
 	<meta property="og:type" content="website" />
     
-	<meta property="og:title" content="Tomax Bespoke | Bespoke Creative Woodwork" />
-	<meta property="og:description" content="A bespoke handcrafted woodwork business, creating unique and creative crafts of high quality" />
-	<meta property="og:url" content="https://www.mbdex.live/" />
-	<meta property="og:site_name" content="Tomax Bespoke" />
+	<meta property="og:title" content="Epoxy Woods | Frequently Asked Questions" />
+	<meta property="og:description" content="Crafting bespoke handmade wooden furniture, using the latest epoxy resin pours" />
+	<meta property="og:url" content="https://www.epoxywoods.co.uk/" />
+	<meta property="og:site_name" content="Epoxy Woods | Frequently Asked Questions" />
 	<meta property="og:image" content="img/ion-icon name=logo-amazonion-icon (6).webp" alt="Ogimage"/>
 	<meta property="og:image:width" content="2048" />
 	<meta property="og:image:height" content="2560" />
 	<meta property="og:image:type" content="img/ion-icon name=logo-amazonion-icon (6).webp" alt="Ogtype"/>
 
     <!-- Google Tag Manager -->
-    <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-    new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-    j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-    'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-    })(window,document,'script','dataLayer','GTM-MW5JBGL');</script>
     <!-- End Google Tag Manager -->
 
     <meta http-equiv="Content-Security-Policy"/>  
@@ -43,11 +38,11 @@
 
     <script src="https://kit.fontawesome.com/4c7f2cf79a.js" crossorigin="anonymous"></script>
 
-    <link rel="icon" href="img/favicon.png" sizes="32x32" alt="Apple"/>
-    <link rel="icon" href="img/ion-icon name=logo-amazonion-icon (7).webp" sizes="192x192" alt="Iphone"/>
-    <link rel="icon" href="img/ion-icon name=logo-amazonion-icon (7).webp" sizes="144x144" alt="Startup"/>
-    <link rel="apple-touch-icon" href="img/ion-icon name=logo-amazonion-icon (8).webp" alt="Touch"/>
-    <meta name="msapplication-TileImage" content="img/ion-icon name=logo-amazonion-icon (8).webp" sizes="270x270" height="270" width="270" alt="icon"/>
+    <link rel="icon" href="img/favicon-16x16.png" sizes="32x32" alt="Apple"/>
+    <link rel="icon" href="img/android-chrome-192x192.png" sizes="192x192" alt="Iphone"/>
+    <link rel="icon" href="img/android-chrome-512x512.png" sizes="144x144" alt="Startup"/>
+    <link rel="apple-touch-icon" href="img/apple-touch-icon.png" alt="Touch"/>
+    <meta name="msapplication-TileImage" content="img/android-chrome-512x512" sizes="270x270" height="270" width="270" alt="icon"/>
 
     <!-- Google Font -->
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;600;700;800;900&display=swap"
@@ -66,15 +61,17 @@
 <body>
 
     <!-- Google Tag Manager (noscript) -->
-    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-MW5JBGL"
-    height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <!-- End Google Tag Manager (noscript) -->
-
 
     <!-- Header Section Begin -->
     <div class="containers" style="width: 100%;">
-        <header class="header" style="background-image: url(); background-position: center;     background-size: cover; padding-bottom: 1vh; border-bottom: solid;">
-            <nav class="navbar"  style="justify-content: center;     background-color: #f1f5f8;">
+        <header class="header" style="    background-image: url(img/logo.webp); 
+        background-position: center;
+        background-size: contain;
+        background-repeat: no-repeat;
+        height: 15vh;
+        margin: 1vmax;">
+            <nav class="navbar"  style="justify-content: center;     background-color: #f1f5f800;">
             <a style="color: #03327d; font-family: sans-serif;" class="brand" href="#"></a>
             <input type="checkbox" id="nav" class="hidden">
             <label for="nav" class="nav-toggle">
@@ -82,15 +79,15 @@
                 <span></span>
                 <span></span>
             </label>
-            <div class="wrapper" >
-                <ul class="menu">
+            <div class="wrapper" style="    margin-top: 1.25vh;">
+                <ul class="menu" style="text-align-last: center;">
                 <li class="menu-item"><a href="index.html"><underline style="color: #03327d;">Home</underline></a></li>
-                <li class="menu-item"><a href="shop-details.html"><underline style="color: #03327d;">Shop</underline></a></li>
+                <li class="menu-item"><a href="epoxy oak wood river table.html"><underline style="color: #03327d;">Shop </underline></a></li>
   
-                <li class="menu-item"><a href="shop.html"><i class="fa-brands fa-youtube" style="font-size: x-large;"></i></li>
-                  <li class="menu-item"><a href="shop.html"><underline style="color: #03327d;">Etsy</underline></a></li>
-                  <li class="menu-item" style="border-width: thin; border-radius: 10px; padding: 10px; box-shadow: 5px 5px 10px #dbdbdb, -5px -5px 10px #ffffff;"><a href="faq.html"><underline style="color: #03327d;">About Us</underline></a></li>
-                </ul>
+                <li class="menu-item"><a href="shop.html" style="color: #00033c40;">Youtube</a></a></li>
+                <li class="menu-item"><a href="shop.html"><underline style="color: #03327d;"> Etsy</underline></a></li>
+                <li class="menu-item" style="border-width: thin; border-radius: 10px; padding: 10px; box-shadow: 5px 5px 10px #dbdbdb, -5px -5px 10px #ffffff;"><a href="faq.html"><underline style="color: #03327d;">About Us</underline></a></li>
+              </ul>
             </div>
             </nav>
         </header>
@@ -101,31 +98,31 @@
         <h2>Frequently Asked Questions</h2><BR><BR><BR>
         <div class="accordion">
           <div class="accordion-item" style="color: black;">
-            <button id="accordion-button-1" aria-expanded="false"><span class="accordion-title" style="color: black;">How long until my order is delivered?</span><span class="faq-icon" aria-hidden="true"></span></button>
+            <button id="accordion-button-1" aria-expanded="false"><span class="accordion-title" style="color: black;">How long does it take to craft and recieve my order?</span><span class="faq-icon" aria-hidden="true"></span></button>
             <div class="accordion-content">
-              <p>Depending on order size, we try to aim for delivery within 3 business days.  This is due to the amount of orders we anticipate to recieve and the way our courier deluvery service operate. Any problems, please feel free to contact us</p>
+              <p>Depending on order size, we try to aim for delivery within 3 - 4 weeks.  This is down to the sourcing of the finest woods, quality control checks and time spent handcrafting to the level that you expect! Any problems, please feel free to contact us</p>
             </div>
           </div>
           <div class="accordion-item" style="color: black;">
-            <button id="accordion-button-2" aria-expanded="false"><span class="accordion-title" style="color: black;">Are cakes gluten/vegan suitable?</span><span class="faq-icon" aria-hidden="true"></span></button>
+            <button id="accordion-button-2" aria-expanded="false"><span class="accordion-title" style="color: black;">Can I place a custom order?</span><span class="faq-icon" aria-hidden="true"></span></button>
             <div class="accordion-content">
-              <p>No, not all of our baking is gluten/vegan suitable.  However, dont worry, we offer gluten versions upon request!</p>
+              <p>Absolutely, the team are able to accomodate various requests such as specific sizing, patterns or designs.  Our main goal is to ensure that you, as the customer, recieve your dream piece.</p>
             </div>
           </div>
           <div class="accordion-item" style="color: black;">
-            <button id="accordion-button-3" aria-expanded="false"><span class="accordion-title" style="color: black;">I can't access my online learning?</span><span class="faq-icon" aria-hidden="true"></span></button>
+            <button id="accordion-button-3" aria-expanded="false"><span class="accordion-title" style="color: black;">I've changed my mind on the epoxy colour</span><span class="faq-icon" aria-hidden="true"></span></button>
             <div class="accordion-content">
-              <p>Hopefully we should have recieved an email with your link to our class, if drop the team an email and we can check our end to help resolve the issue</p>
+              <p>Dont panic!  If you are within 1 week of your order, the team wont have started the epoxy pour yet, this means we can review your colour choice and help you find the perfect mix. </p>
             </div>
           </div>
           <div class="accordion-item" style="color: black;">
-            <button id="accordion-button-4" aria-expanded="false"><span class="accordion-title" style="color: black;">Do you take large orders?</span><span class="faq-icon" aria-hidden="true"></span></button>
+            <button id="accordion-button-4" aria-expanded="false"><span class="accordion-title" style="color: black;">Do you take commercial orders</span><span class="faq-icon" aria-hidden="true"></span></button>
             <div class="accordion-content">
-              <p>Absolutely, we currently accomodate large business event, wedding and more!  So please shout the team for any large quantaties! </p>
+              <p>Yes, we're more than happy to challenge our skills in a large quality/ sized order.  The team have over 5 years experience in this field of work and know exactly what you expect! </p>
             </div>
           </div>
           <div class="accordion-item" style="color: black;">
-            <button id="accordion-button-5" aria-expanded="false"><span class="accordion-title" style="color: black;">I have a problem, who do I contact?</span><span class="faq-icon" aria-hidden="true"></span></button>
+            <button id="accordion-button-5" aria-expanded="false"><span class="accordion-title" style="color: black;">I have a query, who do I contact?</span><span class="faq-icon" aria-hidden="true"></span></button>
             <div class="accordion-content">
               <p>If you have any worries, questions or problems, dont hesitate to reach out the the team via out 'Contact us' section in the page footer</p>
             </div>
@@ -147,14 +144,14 @@
                   <div class="row" style="justify-content: center;">
                       <div class="col-sm-4">
                           <div class="team-member">
-                              <img src="img/Tommo.png" class="img-responsive img-circle" alt="">
+                              <img src="img/tommo.webp" class="img-responsive img-circle" alt="">
                               <h4>Tom Southern</h4>
                               <p class="text-muted">Lead Designer</p>
                               <p class="text-muted">Co-founder</p>
                               <ul class="list-inline social-buttons" style="display: flex; flex-direction: row; flex-wrap: wrap;align-content: center;justify-content: center;align-items: center;">
                                   <li><a href="#"><i class="fa fa-facebook"></i></a>
                                   </li>
-                                  <li><div class="imageContainers" style="width: 45px; height:45px;"><img src="img/tommo.png" width="100%" height="100%" style="border-radius: 50px; border-color:black; border-width: thin; box-shadow: none;"></i></div>
+                                  <li><div class="imageContainers" style="width: 45px; height:45px;"><img src="img/tommo.webp" width="100%" height="100%" style="border-radius: 50px; border-color:black; border-width: thin; box-shadow: none;"></i></div>
                                   </li>
                                   <li><a href="#"><i class="fa fa-linkedin"></i></a>
                                   </li>
@@ -163,14 +160,14 @@
                       </div>
                       <div class="col-sm-4">
                           <div class="team-member" >
-                              <img src="img/Max.png" class="img-responsive img-circle" alt="">
+                              <img src="img/max.webp" class="img-responsive img-circle" alt="">
                               <h4>Max Worsencroft</h4>
                               <p class="text-muted">Lead Operations Control</p>
                               <p class="text-muted">Co-founder</p>
                               <ul class="list-inline social-buttons" style="display: flex; flex-direction: row; flex-wrap: wrap;align-content: center;justify-content: center;align-items: center;">
                                   <li><a href="#"><i class="fa fa-facebook"></i></a>
                                   </li>
-                                  <li><div class="imageContainers" style="width: 45px; height:45px;"><img src="img/MaxFun.png" width="100%" height="100%" style="border-radius: 50px; border-color:black; border-width: thin; box-shadow: none;"></i></div>
+                                  <li><div class="imageContainers" style="width: 45px; height:45px;"><img src="img/Max.webp" width="100%" height="100%" style="border-radius: 50px; border-color:black; border-width: thin; box-shadow: none;"></i></div>
                                   </li>
                                   <li><a href="#"><i class="fa fa-linkedin"></i></a>
                                   </li>
@@ -227,7 +224,7 @@
                         <br><h5 class="widget-title">Contact</h5>
                         <div class="footer_menu">
                             <ul>
-                            <li><a href="cravingcake@gmail.com">Email Us</a></li>
+                            <li><a href="t.southern@hotmail.co.uk">Email Us</a></li>
                             <li><a href="faq.html">FAQ's</a></li>
                             </ul>
                         </div>
