--- a/termcondition.html
+++ b/termcondition.html
@@ -2,9 +2,9 @@
 <html lang="en" X-Frame-Options="SAMEORIGIN" X-Frame-Options: SAMEORIGIN X-Content-Type-Options="nosniff" X-Content-Type-Options: nosniff >
 
 <head>
-    <title>Tomax Bespoke | Bespoke Creative Woodwork</title>
-    <meta name="title" content="Tomax Bespoke | Bespoke Creative Woodwork"/>
-    <meta name="description" content="A bespoke handcrafted woodwork business, creating unique and creative crafts of high quality" />
+    <title>Epoxy Woods | Our Terms & Conditions</title>
+    <meta name="title" content="Epoxy Woods | Our Terms & Conditions"/>
+    <meta name="description" content="Crafting bespoke handmade wooden furniture, using the latest epoxy resin pours" />
     <meta name="keywords" content=""/>
     <meta name="robots" content="INDEX,FOLLOW"/>
     <meta charset="UTF-8" />
@@ -17,25 +17,20 @@
     <link rel="preload" as="style" href="https://fonts.googleapis.com/css?family=Lato%3A300%2C400%2C700%2C300%2C700%7CDomine%3A400&#038;display=swap" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato%3A300%2C400%2C700%2C300%2C700%7CDomine%3A400&#038;display=swap" media="print" onload="this.media='all'" /><noscript>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato%3A300%2C400%2C700%2C300%2C700%7CDomine%3A400&#038;display=swap" /></noscript>
-	<link rel="canonical" href="https://www.cravingcake.co.uk/"/>
+	<link rel="canonical" href="https://www.epoxywoods.co.uk/"/>
 	<meta property="og:locale" content="en" />
 	<meta property="og:type" content="website" />
     
-	<meta property="og:title" content="Tomax Bespoke | Bespoke Creative Woodwork" />
-	<meta property="og:description" content="A bespoke handcrafted woodwork business, creating unique and creative crafts of high quality" />
-	<meta property="og:url" content="https://www.mbdex.live/" />
-	<meta property="og:site_name" content="Tomax Bespoke" />
+	<meta property="og:title" content="Epoxy Woods | Our Terms & Conditions" />
+	<meta property="og:description" content="Crafting bespoke handmade wooden furniture, using the latest epoxy resin pours" />
+	<meta property="og:url" content="https://www.epoxywoods.co.uk/" />
+	<meta property="og:site_name" content="Epoxy Woods | Our Terms & Conditions" />
 	<meta property="og:image" content="img/ion-icon name=logo-amazonion-icon (6).webp" alt="Ogimage"/>
 	<meta property="og:image:width" content="2048" />
 	<meta property="og:image:height" content="2560" />
 	<meta property="og:image:type" content="img/ion-icon name=logo-amazonion-icon (6).webp" alt="Ogtype"/>
 
     <!-- Google Tag Manager -->
-    <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-    new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-    j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-    'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-    })(window,document,'script','dataLayer','GTM-MW5JBGL');</script>
     <!-- End Google Tag Manager -->
 
     <meta http-equiv="Content-Security-Policy"/>  
@@ -43,11 +38,11 @@
 
     <script src="https://kit.fontawesome.com/4c7f2cf79a.js" crossorigin="anonymous"></script>
 
-    <link rel="icon" href="img/favicon.png" sizes="32x32" alt="Apple"/>
-    <link rel="icon" href="img/ion-icon name=logo-amazonion-icon (7).webp" sizes="192x192" alt="Iphone"/>
-    <link rel="icon" href="img/ion-icon name=logo-amazonion-icon (7).webp" sizes="144x144" alt="Startup"/>
-    <link rel="apple-touch-icon" href="img/ion-icon name=logo-amazonion-icon (8).webp" alt="Touch"/>
-    <meta name="msapplication-TileImage" content="img/ion-icon name=logo-amazonion-icon (8).webp" sizes="270x270" height="270" width="270" alt="icon"/>
+    <link rel="icon" href="img/favicon-16x16.png" sizes="32x32" alt="Apple"/>
+    <link rel="icon" href="img/android-chrome-192x192.png" sizes="192x192" alt="Iphone"/>
+    <link rel="icon" href="img/android-chrome-512x512.png" sizes="144x144" alt="Startup"/>
+    <link rel="apple-touch-icon" href="img/apple-touch-icon.png" alt="Touch"/>
+    <meta name="msapplication-TileImage" content="img/android-chrome-512x512" sizes="270x270" height="270" width="270" alt="icon"/>
 
     <!-- Google Font -->
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;600;700;800;900&display=swap"
@@ -66,15 +61,17 @@
 <body>
 
     <!-- Google Tag Manager (noscript) -->
-    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-MW5JBGL"
-    height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <!-- End Google Tag Manager (noscript) -->
-
 
     <!-- Header Section Begin -->
     <div class="containers" style="width: 100%;">
-        <header class="header" style="background-image: url(); background-position: center;     background-size: cover; padding-bottom: 1vh; border-bottom: solid;">
-            <nav class="navbar"  style="justify-content: center;     background-color: #f1f5f8;">
+        <header class="header" style="    background-image: url(img/logo.webp); 
+        background-position: center;
+        background-size: contain;
+        background-repeat: no-repeat;
+        height: 15vh;
+        margin: 1vmax;">
+            <nav class="navbar"  style="justify-content: center;     background-color: #f1f5f800;">
             <a style="color: #03327d; font-family: sans-serif;" class="brand" href="#"></a>
             <input type="checkbox" id="nav" class="hidden">
             <label for="nav" class="nav-toggle">
@@ -82,15 +79,15 @@
                 <span></span>
                 <span></span>
             </label>
-            <div class="wrapper" >
-                <ul class="menu">
+            <div class="wrapper" style="    margin-top: 1.25vh;">
+                <ul class="menu" style="text-align-last: center;">
                 <li class="menu-item"><a href="index.html"><underline style="color: #03327d;">Home</underline></a></li>
-                <li class="menu-item"><a href="shop-details.html"><underline style="color: #03327d;">Shop</underline></a></li>
+                <li class="menu-item"><a href="epoxy oak wood river table.html"><underline style="color: #03327d;">Shop </underline></a></li>
   
-                <li class="menu-item"><a href="shop.html"><i class="fa-brands fa-youtube" style="font-size: x-large;"></i></li>
-                    <li class="menu-item"><a href="shop.html"><underline style="color: #03327d;">Etsy</underline></a></li>
-                    <li class="menu-item" style="border-width: thin; border-radius: 10px; padding: 10px; box-shadow: 5px 5px 10px #dbdbdb, -5px -5px 10px #ffffff;"><a href="faq.html"><underline style="color: #03327d;">About Us</underline></a></li>
-                </ul>
+                <li class="menu-item"><a href="shop.html" style="color: #00033c40;">Youtube</a></a></li>
+                <li class="menu-item"><a href="shop.html"><underline style="color: #03327d;"> Etsy</underline></a></li>
+                <li class="menu-item" style="border-width: thin; border-radius: 10px; padding: 10px; box-shadow: 5px 5px 10px #dbdbdb, -5px -5px 10px #ffffff;"><a href="faq.html"><underline style="color: #03327d;">About Us</underline></a></li>
+              </ul>
             </div>
             </nav>
         </header>
@@ -171,19 +168,18 @@
         Any disputes relating to these terms and conditions will be subject to the non-exclusive jurisdiction of the courts of England and Wales. These terms and conditions will be governed by and construed in accordance with English law.
         
         <BR>(n) Registrations and authorizations
-        We are registered with Craven Council, and have been approved with a 5 Star rating.
+        We are registered with the UK HRMC/ GOV.
         <BR>(o) Our details
-        The full name of our company is XXXX
-        You can contact us by email to XXXX.
+        The full name of our company is Epoxy woods
         <BR><BR>
       <h2 style="text-align:center; margin-top: 50px;">Refund and Returns Policy</h2>
       <p style="text-align: left; margin:75px;">
-        <BR>The following Terms & Conditions are accepted by you when placing an order from CravingCake
+        <BR>The following Terms & Conditions are accepted by you when placing an order from Epoxy Woods
 
             <BR> <BR>Order confirmation over the phone and online cannot be guaranteed until payment has been received. Pro forma payment is highly advised for orders placed using an invoice, and we reserve the right to cancel any order that is not paid for by the delivery date. The issuance and receipt of your invoice are considered confirmation of your order, and in the event that your order is cancelled or delayed, invoices will still be due because we may have had to turn away other customers and begin preparations for your order.
-                <BR> <BR>On the date specified in your order, deliveries are made personally or by Royal Mail. On the day of your order, please make sure someone will be at the delivery address to accept the cupcakes. If no one is there, we will try our best to leave the cupcakes in a safe place (with a neighbour, receptionist, caretaker, etc.), but we cannot keep the cupcakes for a subsequent delivery; they will be left at the address you have provided. Although all of our drivers are trained in proper cake handling techniques and will always impart this knowledge to any post room staff, we cannot accept responsibility for how your cupcakes are handled after the cakes have been signed for.
-                    <BR>    <BR>Additionally, if collections are accessible. After the cakes have left the bakery, we are not responsible for any damage sustained in transit.
-                        <BR>       <BR>We do not accept returns on any of our cakes or cupcakes because they are all baked to order. You will only be eligible for refunds, credit notes, or replacement orders of equal value if you receive the wrong item or the products turn out to be of subpar quality. If this is the case, or if you are unhappy in any other way with the state or calibre of your cakes when they arrive, you must get in touch with us right away. After this time, CravingCake will not be held responsible for any complaints.
+                <BR> <BR>On the date specified in your order, deliveries are made personally or by Royal Mail. On the day of your order, please make sure someone will be at the delivery address to accept the furniture. If no one is there, we will try our best to leave the furniture in a safe place (with a neighbour, receptionist, caretaker, etc.), but we cannot keep the furniture for a subsequent delivery; they will be left at the address you have provided. Although all of our drivers are trained in proper furniture handling techniques and will always impart this knowledge to any post room staff, we cannot accept responsibility for how your furniture are handled after the furniture have been signed for.
+                    <BR>    <BR>Additionally, if collections are accessible. After the furniture has left the workshop, we are not responsible for any damage sustained in transit.
+                        <BR>       <BR>We do not accept returns on any of our furniture because they are all build to order. You will only be eligible for refunds, credit notes, or replacement orders of equal value if you receive the wrong item or the products turn out to be of subpar quality. If this is the case, or if you are unhappy in any other way with the state or calibre of your furniture when they arrive, you must get in touch with us right away. After this time, Epoxy woods will not be held responsible for any complaints.
                             <BR>          <BR>On our website, blog, Twitter, and Facebook pages, we reserve the right to post pictures of the orders we prepare. You must let us know at the time of ordering if you specifically want us to comply with your request that we not use pictures of your order or that we send you a picture of your order.
                                 <BR>              <BR>Please get in touch with us as early as possible if you need to modify the date, specifics, or all of your order. Orders placed over the phone or online that are cancelled 10 days or more before the delivery or pickup date are eligible for a full refund of the order amount; orders cancelled between 5 and 9 days before the delivery or pickup date are eligible for a 50% refund; and orders cancelled within 48 hours of the order date are not eligible for a refund.
 
@@ -239,7 +235,7 @@
                         <br><h5 class="widget-title">Contact</h5>
                         <div class="footer_menu">
                             <ul>
-                            <li><a href="cravingcake@gmail.com">Email Us</a></li>
+                            <li><a href="t.southern@hotmail.co.uk">Email Us</a></li>
                             <li><a href="faq.html">FAQ's</a></li>
                             </ul>
                         </div>
