--- a/faq.html
+++ b/faq.html
@@ -82,7 +82,7 @@
             <div class="wrapper" style="    margin-top: 1.25vh;">
                 <ul class="menu" style="text-align-last: center;">
                 <li class="menu-item"><a href="index.html"><underline style="color: #03327d;">Home</underline></a></li>
-                <li class="menu-item"><a href="epoxy oak wood river table.html"><underline style="color: #03327d;">Shop </underline></a></li>
+                <li class="menu-item"><a href="epoxy-oak-wood-river-table.html"><underline style="color: #03327d;">Shop </underline></a></li>
   
                 <li class="menu-item"><a href="shop.html" style="color: #00033c40;">Youtube</a></a></li>
                 <li class="menu-item"><a href="shop.html"><underline style="color: #03327d;"> Etsy</underline></a></li>
