--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
             <div class="wrapper" style="    margin-top: 1.25vh;">
                 <ul class="menu" style="text-align-last: center;">
                 <li class="menu-item" style="border-width: thin; border-radius: 10px; padding: 10px; box-shadow: 5px 5px 10px #dbdbdb, -5px -5px 10px #ffffff;"><a href="index.html"><underline style="color: #03327d;">Home</underline></a></li>
-                <li class="menu-item"><a href="epoxy oak wood river table.html"><underline style="color: #03327d;">Shop </underline></a></li>
+                <li class="menu-item"><a href="epoxy-oak-wood-river-table.html"><underline style="color: #03327d;">Shop </underline></a></li>
   
                 <li class="menu-item"><a href="shop.html" style="color: #00033c40;">Youtube</a></a></li>
                 <li class="menu-item"><a href="shop.html"><underline style="color: #03327d;"> Etsy</underline></a></li>
@@ -102,7 +102,7 @@
                       <div class="content-center" style="z-index: 2; top: 300px;"><BR><BR><BR><BR><BR><BR>
                         <div class="h2 title" style="color: #03327d; font-size: 5em; font-weight: bold; font-family:u;">Crafting Sustainable Perfection</div>
                         <p style="color: #03327d;"><img src=""></p>
-                        <a  class="btn btn-primary smooth-scroll mr-2 aos-init aos-animate" style="border: solid; background-image: url(img/Woodworkback.png);" href="epoxy oak wood river table.html" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Custom Design</a>
+                        <a  class="btn btn-primary smooth-scroll mr-2 aos-init aos-animate" style="border: solid; background-image: url(img/Woodworkback.png);" href="epoxy-oak-wood-river-table.html" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Custom Design</a>
                         <a  class="btn btn-primary aos-init aos-animate" style="border: solid; background-color: #03327d;" href="shop.html" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Shop all</a>
                         <a  class="btn btn-primary aos-init aos-animate" style="border: solid; background-color: #00183e;" href="shop.html" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Subscribe 10% Off!</a>
 
@@ -187,28 +187,28 @@
                 <div class="contain" style="padding-top: 25px; display: flex; flex-direction: row; flex-wrap: wrap; align-items: center; justify-content: center; gap: 20px;     text-align-last: center;">
                     <article class="card" style="background: url(/img/producttable1.png); background-size: contain; background-repeat: no-repeat;">
                         <div class="card__content">
-                            <h3 class="card__title"><a href="epoxy oak wood river table.html">"Product Name"</a></h3>
+                            <h3 class="card__title"><a href="epoxy-oak-wood-river-table.html">"Product Name"</a></h3>
                             <span class="card_subtitle">Price</span>
                             <p class="card__description">Description</p>
                         </div>
                     </article>
                     <article class="card" style="background: url(/img/producttable2.png); background-size: contain; background-repeat: no-repeat;">
                         <div class="card__content">
-                            <h3 class="card__title"><a href="epoxy oak wood river table.html">"Pro Name"</a></h3>
+                            <h3 class="card__title"><a href="epoxy-oak-wood-river-table.html">"Pro Name"</a></h3>
                             <span class="card_subtitle">Price</span>
                             <p class="card__description">Description</p>
                         </div>
                     </article>
                     <article class="card" style="background: url(/img/producttable3.png); background-size: contain; background-repeat: no-repeat;">
                         <div class="card__content">
-                            <h3 class="card__title"><a href="epoxy oak wood river table.html">"Pro Name"</a></h3>
+                            <h3 class="card__title"><a href="epoxy-oak-wood-river-table.html">"Pro Name"</a></h3>
                             <span class="card_subtitle">Price</span>
                             <p class="card__description">Description</p>
                         </div>
                     </article>
                     <article class="card" style="background: url(/img/producttable4.png); background-size: contain; background-repeat: no-repeat;">
                         <div class="card__content">
-                            <h3 class="card__title"><a href="epoxy oak wood river table.html">"Pro Name"</a></h3>
+                            <h3 class="card__title"><a href="epoxy-oak-wood-river-table.html">"Pro Name"</a></h3>
                             <span class="card_subtitle">Price</span>
                             <p class="card__description">Description</p>
                         </div>
@@ -217,28 +217,28 @@
                     </article>
                     <article class="card" style="background: url(/img/producttable6.png); background-size: contain; background-repeat: no-repeat;">
                         <div class="card__content">
-                            <h3 class="card__title"><a href="epoxy oak wood river table.html">"Pro Name"</a></h3>
+                            <h3 class="card__title"><a href="epoxy-oak-wood-river-table.html">"Pro Name"</a></h3>
                             <span class="card_subtitle">Price</span>
                             <p class="card__description">Description</p>
                         </div>
                     </article>
                     <article class="card" style="background: url(/img/producttable4.png); background-size: contain; background-repeat: no-repeat;">
                         <div class="card__content">
-                            <h3 class="card__title"><a href="epoxy oak wood river table.html">"Pro Name"</a></h3>
+                            <h3 class="card__title"><a href="epoxy-oak-wood-river-table.html">"Pro Name"</a></h3>
                             <span class="card_subtitle">Price</span>
                             <p class="card__description">Description</p>
                         </div>
                     </article>
                     <article class="card" style="background: url(/img/producttable5.png); background-size: contain; background-repeat: no-repeat;">
                         <div class="card__content">
-                            <h3 class="card__title"><a href="epoxy oak wood river table.html">"Pro Name"</a></h3>
+                            <h3 class="card__title"><a href="epoxy-oak-wood-river-table.html">"Pro Name"</a></h3>
                             <span class="card_subtitle">Price</span>
                             <p class="card__description">Description</p>
                         </div>
                     </article>
                     <article class="card" style="background: url(/img/producttable6.png); background-size: contain; background-repeat: no-repeat;">
                         <div class="card__content">
-                            <h3 class="card__title"><a href="epoxy oak wood river table.html">"Pro Name"</a></h3>
+                            <h3 class="card__title"><a href="epoxy-oak-wood-river-table.html">"Pro Name"</a></h3>
                             <span class="card_subtitle">Price</span>
                             <p class="card__description">Description</p>
                         </div>
