--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         background-repeat: no-repeat;
         height: 15vh;
         margin: 1vmax;">
-            <nav class="navbar"  style="justify-content: center;     background-color: #f1f5f800;">
+            <nav class="navbar"  style="justify-content: center;     background-color: #f1f5f800; z-index: 24;">
             <a style="color: #03327d; font-family: sans-serif;" class="brand" href="#"></a>
             <input type="checkbox" id="nav" class="hidden">
             <label for="nav" class="nav-toggle">
@@ -80,7 +80,7 @@
                 <span></span>
             </label>
             <div class="wrapper" style="    margin-top: 1.25vh;">
-                <ul class="menu" style="text-align-last: center; z-index: 25;">
+                <ul class="menu" style="text-align-last: center;">
                 <li class="menu-item" style="border-width: thin; border-radius: 10px; padding: 10px; box-shadow: 5px 5px 10px #dbdbdb, -5px -5px 10px #ffffff;"><a href="index.html"><underline style="color: #03327d;">Home</underline></a></li>
                 <li class="menu-item"><a href="epoxy-oak-wood-river-table.html"><underline style="color: #03327d;">Shop </underline></a></li>
   
